@@ -2,6 +2,8 @@ v5.2.2
 
   * added the amb tutorial.
 
+  * added define-union-language
+
 v5.2.1
 
   * rewrote the internals of the pattern matcher to be more consistent
